# OpenWorkspace

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  OpenWorkspace-architecture-plan.md  README.md  SECURITY.md  clippy.toml  deny.toml  leptosfmt.toml  rustfmt.toml
apps/web/app/: Cargo.toml
apps/web/app/src/: auth.rs  csrf_client.rs  dashboard.rs  lib.rs  showcase.rs  webauthn.rs
apps/web/app/src/account/: mod.rs  page.rs
apps/web/app/src/auth/: mod.rs  page.rs
apps/web/app/src/showcase/: buttons.rs  chat.rs  data.rs  dates.rs  feedback.rs  floor.rs  forms.rs  hooks.rs  index.rs  inputs.rs  layout.rs  mod.rs  navigation.rs  overlays.rs  overview.rs  shell.rs  theme.rs
apps/web/frontend/: Cargo.toml
apps/web/frontend/src/: lib.rs
apps/web/server/: Cargo.toml
apps/web/server/src/: context.rs  main.rs  mfa.rs  oidc.rs  upload.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/auth/: Cargo.toml
crates/auth/src/: backend.rs  bootstrap.rs  csrf.rs  keyring.rs  layer.rs  lib.rs  mfa.rs  recovery.rs  store.rs  totp.rs  webauthn.rs
crates/auth/src/authz/: backend.rs  error.rs  mod.rs  target.rs
crates/auth/src/mfa/: keyring.rs  mod.rs  recovery.rs  state.rs  totp.rs  webauthn.rs
crates/auth/src/oidc/: error.rs  flow.rs  http.rs  logout.rs  mod.rs  provider.rs  provision.rs  seed.rs  session.rs
crates/auth/src/password/: backend.rs  bootstrap.rs  mod.rs  policy.rs
crates/auth/src/session/: layer.rs  mod.rs  store.rs
crates/auth/tests/: access_enforcement.rs  oidc_flow.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: field.rs  lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20260626173511_extensions.down.sql  20260626173511_extensions.up.sql  20260626183513_enums.down.sql  20260626183513_enums.up.sql  20260626183514_identity.down.sql  20260626183514_identity.up.sql  20260626183515_org_location_resource.down.sql  20260626183515_org_location_resource.up.sql  20260626183516_bookings.down.sql  20260626183516_bookings.up.sql  20260626183517_ops_audit.down.sql  20260626183517_ops_audit.up.sql  20260626183518_cycle_fks.down.sql  20260626183518_cycle_fks.up.sql  20260627073831_tower_sessions_session.down.sql  20260627073831_tower_sessions_session.up.sql  20260627093012_session_expiry_index.down.sql  20260627093012_session_expiry_index.up.sql  20260627102240_p6_mfa_hardening.down.sql  20260627102240_p6_mfa_hardening.up.sql  20260629090348_p8_access_enforcement.down.sql  20260629090348_p8_access_enforcement.up.sql  20260629145716_p11_equipment.down.sql  20260629145716_p11_equipment.up.sql  20260629151255_p11_drop_vehicle_kind.down.sql  20260629151255_p11_drop_vehicle_kind.up.sql
crates/db/src/: assets.rs  bookings.rs  credentials.rs  crypto_keys.rs  equipment.rs  floorplan.rs  lib.rs  locations.rs  mfa.rs  resources.rs
crates/db/src/access/: audit.rs  context.rs  mod.rs  principal.rs  roles.rs  segmentation.rs  target.rs
crates/db/src/identity/: crypto_keys.rs  mfa.rs  mod.rs  oidc.rs
crates/floorplan/: Cargo.toml
crates/floorplan/proptest-regressions/model/: scene.txt
crates/floorplan/src/: lib.rs  render.rs
crates/floorplan/src/builder/: editor.rs  mod.rs  ops.rs
crates/floorplan/src/builder/snapshots/: floorplan__builder__editor__tests__builder_office.snap
crates/floorplan/src/catalog/: annotation.rs  bookable.rs  furniture.rs  geometry.rs  mod.rs  registry.rs  structure.rs  wayfinding.rs  zoning.rs
crates/floorplan/src/model/: error.rs  kind.rs  migrate.rs  mod.rs  samples.rs  scene.rs
crates/floorplan/src/snapshots/: floorplan__render__tests__office_default_states.snap  floorplan__render__tests__office_mixed_states.snap
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  key.rs  lib.rs  pipeline.rs
crates/storage/tests/: integration.rs
crates/ui/: Cargo.toml  ui_config.toml
crates/ui/reference/shadcn/: README.md
crates/ui/reference/shadcn/ui/: alert-dialog.tsx  breadcrumb.tsx  button-group.tsx  calendar.tsx  carousel.tsx  chart.tsx  combobox.tsx  command.tsx  dialog.tsx  direction.tsx  drawer.tsx  field.tsx  form.tsx  hover-card.tsx  input-group.tsx  input-otp.tsx  item.tsx  kbd.tsx  native-select.tsx  pagination.tsx  resizable.tsx  sidebar.tsx  slider.tsx  toggle-group.tsx
crates/ui/src/: constants.rs  lib.rs
crates/ui/src/components/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  attachment.rs  avatar.rs  badge.rs  breadcrumb.rs  bubble.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  chart.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  date_picker.rs  dialog.rs  direction.rs  drawer.rs  dropdown_menu.rs  empty.rs  field.rs  hover_card.rs  input.rs  input_group.rs  input_otp.rs  item.rs  kbd.rs  label.rs  marker.rs  menubar.rs  message.rs  message_scroller.rs  mod.rs  native_select.rs  (+22 more)
crates/ui/src/components/hooks/: mod.rs  use_can_scroll_vertical.rs  use_card_carousel.rs  use_cell_edit.rs  use_copy_clipboard.rs  use_data_scrolled.rs  use_form.rs  use_history.rs  use_horizontal_scroll.rs  use_input_otp.rs  use_is_mobile.rs  use_lock_body_scroll.rs  use_locks.rs  use_media_query.rs  use_pagination.rs  use_press_hold.rs  use_random.rs  use_theme_mode.rs  use_virtual_scroll.rs
crates/ui/src/components/ui/: accordion.rs  action_bar.rs  alert.rs  alert_dialog.rs  animate.rs  aspect_ratio.rs  auto_form.rs  avatar.rs  badge.rs  bento_grid.rs  bottom_nav.rs  breadcrumb.rs  button.rs  button_action.rs  button_group.rs  callout.rs  card.rs  card_carousel.rs  carousel.rs  chat.rs  checkbox.rs  chips.rs  collapsible.rs  (+61 more)
crates/ui/src/hooks/: focus_on_hover.rs  mod.rs  use_anchored_position.rs  use_dismiss.rs  use_is_mobile.rs  use_theme_mode.rs
crates/ui/src/tw/: clx.rs  cn.rs  mod.rs  slot.rs  variants.rs
crates/ui/src/utils/: country.rs  date.rs  mod.rs  phone_number.rs  query.rs
(+271 files in other folders)
