[workspace]
resolver = "2"
members = [
    "apps/web/app",
    "apps/web/frontend",
    "apps/web/server",
    "apps/worker",
    "crates/domain",
    "crates/db",
    "crates/auth",
    "crates/floorplan",
    "crates/crypto",
    "crates/i18n",
    "crates/notify",
    "crates/jobs",
    "crates/ui",
    "crates/config",
    "crates/observability",
]

[workspace.package]
edition = "2024"
rust-version = "1.96"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/rubentalstra/OpenWorkspace"

# Applies to the wasm (hydrate) build.
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
# Leptos (each companion crate tracks its own patch level on the 0.8 line).
leptos = "0.8.20"
leptos_meta = "0.8.6"
leptos_router = "0.8.14"
leptos_axum = "0.8.10"

# Internationalisation (Mozilla Fluent). `fluent-templates`/`unic-langid` are pinned
# to the versions `leptos-fluent` resolves so `i18n` and `notify` share one copy.
leptos-fluent = "0.3.1"
fluent-templates = "0.14.0"
unic-langid = "0.9.6"

# UI kit (crates/ui). STABLE-only: rust-ui's `icons`/`leptos_ui` force `leptos/nightly`
# and are deliberately NOT used. `tw_merge` (the cn() class-merge + cva-style `variants!`
# macro rust-ui components use) is framework-agnostic and stable; `leptos_icons`+`icondata`
# provide Lucide on stable Leptos 0.8. rust-ui component source is CLI-fetched then patched
# onto these. See the UI-foundation plan + docs/development.md.
tw_merge = { version = "0.1.21", features = ["variant"] }
leptos_icons = "0.7.1"
icondata = "0.7"
# Used by the vendored clx/variants macros (rust-ui's leptos_ui macros, copied into
# crates/ui/src/tw to avoid leptos_ui's nightly pin).
paste = "1"

# Server stack.
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["full"] }
http = "1.4.2"

# Errors, logging, wasm glue.
anyhow = "1.0.103"
thiserror = "2.0.18"
tracing = "0.1.44"
log = "0.4.33"
cfg-if = "1.0.4"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.126"

# Shared across 2+ crates (or foundational). Crate-specific deps (figment, sqlx,
# argon2, the otel/metrics stack, …) live in their own crate's Cargo.toml.
serde = { version = "1.0", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
strum = { version = "0.28.0", features = ["derive"] }
validator = "0.20.0"
serde_json = "1.0.150"
time = "0.3.51"

# cargo-leptos configuration (array-of-tables form; one entry per Leptos project).
[[workspace.metadata.leptos]]
name = "openworkspace"
bin-package = "server"
lib-package = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
watch-additional-files = ["locales"]
# Single self-contained Tailwind v4 entry (Pipeline A): cargo-leptos runs its
# bundled Tailwind binary on this file into pkg/openworkspace.css. No `style-file`
# — main.css is the only stylesheet (shadcn Base UI / nova).
tailwind-input-file = "apps/web/style/main.css"
assets-dir = "apps/web/public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false

# Lint policy — see docs/rust-style.md. Groups are denied; pedantic is warn-level.
# CI runs clippy with -D warnings, so "warn" == must-fix. Suppress only with
# #[expect(..., reason = "…")] (allow_attributes* below forbid bare/unexplained allows).
[workspace.lints.rust]
# `deny` (not `forbid`) so a crate could opt out with a documented #[expect] if
# ever needed — none currently does (wasm-bindgen no longer requires it).
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_pub = "deny"
unused_qualifications = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"

[workspace.lints.clippy]
# Groups (priority -1 so the specific lints below override them).
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# No panics / placeholders / ad-hoc output in committed code (tests/bins relaxed via clippy.toml).
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
get_unwrap = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# No silent drops.
let_underscore_must_use = "deny"
let_underscore_future = "deny"
mem_forget = "deny"
# Hygiene.
clone_on_ref_ptr = "deny"
undocumented_unsafe_blocks = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
# Deliberately allowed (noisy / low-signal here); ratchet revisited later.
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
map_unwrap_or = "allow"
default_trait_access = "allow"
struct_excessive_bools = "allow"
cast_precision_loss = "allow"
