[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
config = { path = "../../crates/config", version = "0.1.0" }
db = { path = "../../crates/db", version = "0.1.0" }
observability = { path = "../../crates/observability", version = "0.1.0" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
