[package]
name = "auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Non-optional: the facade's typed domain surface, available without `ssr`.
domain = { path = "../domain", version = "0.1.0" }
db = { path = "../db", version = "0.1.0" }
crypto = { path = "../crypto", version = "0.1.0" }
config = { path = "../config", version = "0.1.0" }
secrecy.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
tracing.workspace = true

# ssr-only: the vendor session/auth stack lives entirely behind this feature so
# axum_login / tower_sessions / sqlx types never reach another crate's API.
axum = { workspace = true, optional = true }
axum-login = { version = "0.18.0", optional = true }
tower-sessions = { version = "0.14.0", optional = true }
# `tower_sessions::SessionStore` is an `#[async_trait]` trait and is not
# re-exported by the facade; the macro is needed to implement it.
async-trait = { version = "0.1.74", optional = true }
# The first-party `PgSessionStore` runs session-row CRUD over the workspace's
# sqlx 0.9 `db::Db` pool — exactly the `db` crate's feature set so there is one
# `sqlx` in the tree (and one chrono/time mapping for `timestamptz`). The store's
# wire format matches the upstream tower-sessions-sqlx-store (rmp_serde body,
# base64 text id) so the existing migration is reused unchanged.
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "macros", "chrono", "uuid"], optional = true }
rmp-serde = { version = "1", optional = true }
# Converts the record's `time::OffsetDateTime` expiry to the `chrono` type the
# shared sqlx pool maps `timestamptz` to (matching the `db` crate's mapping).
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock"], optional = true }
tokio = { workspace = true, optional = true }
rand = { version = "0.9", optional = true }
base64 = { version = "0.22", optional = true }
subtle = { version = "2.6", optional = true }
time = { version = "0.3", optional = true }
form_urlencoded = { version = "1.2", optional = true }
# WebAuthn passkeys. `conditional-ui` unlocks the discoverable (usernameless)
# ceremony; `danger-allow-state-serialisation` lets the in-progress ceremony
# state be persisted — we store it server-side in the tower-sessions row, the
# documented-safe location, never in a client cookie.
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation", "conditional-ui"], optional = true }
# TOTP second factor. `qr` (which pulls in `otpauth`) renders the enrolment QR
# and otpauth URL; `gen_secret` generates the shared secret; `zeroize` wipes it.
totp-rs = { version = "5.7.2", features = ["qr", "gen_secret", "zeroize"], optional = true }
# Carries the serialized webauthn-rs Passkey opaquely to/from the db jsonb column.
serde_json = { version = "1", optional = true }
# OIDC SSO (P7). openidconnect drives the whole flow (discovery, JWKS, Authorization
# Code + PKCE S256, full ID-token validation); its `reqwest` feature provides the
# AsyncHttpClient impl for reqwest::Client. We DROP its default `rustls-tls` feature
# (which turns on oauth2/reqwest's `ring`-bearing rustls path) and supply TLS via the
# direct reqwest dep below, so the whole tree stays on a single aws-lc-rs provider
# (matching sqlx's tls-rustls-aws-lc-rs) — no `ring`, no OpenSSL.
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "timing-resistant-secret-traits", "accept-rfc3339-timestamps", "accept-string-booleans"], optional = true }
# reqwest 0.12.x (NOT 0.13: oauth2 5.0.0 pins reqwest ^0.12 and its AsyncHttpClient
# impl only accepts a 0.12 Client). The `*-no-provider` rustls feature ships rustls
# without a CryptoProvider and skips the `ring`-bearing feature chain; we install the
# aws-lc-rs provider at startup instead.
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls-webpki-roots-no-provider"], optional = true }
# Installs aws-lc-rs as the process-wide rustls CryptoProvider once at startup (the
# -no-provider reqwest feature ships rustls without one). Same rustls 0.23 the sqlx
# pool uses, so there is a single rustls in the tree.
rustls = { version = "0.23.41", optional = true }
# URL parsing/validation for the redirect/return-to allow-list and authorize URL.
url = { version = "2.5", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
# 0.9 to match `db::Db`'s PgPool type; provides `#[sqlx::test]` for the backend
# and store tests, which run the db crate's migrations.
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "macros", "migrate", "chrono", "uuid"] }
secrecy = { workspace = true }
crypto = { path = "../crypto", version = "0.1.0" }
argon2 = { version = "0.5.3", features = ["std"] }
chrono = "0.4.45"
axum = { workspace = true }
axum-login = { version = "0.18.0" }
tower-sessions = { version = "0.14.0" }
http-body-util = "0.1"
form_urlencoded = "1.2"
config = { path = "../config", version = "0.1.0" }
# Store round-trip tests build records with a JSON data map and time-based expiry.
serde_json = "1"
time = { version = "0.3", features = ["std"] }
# Bootstrap test captures tracing output to assert no secret is logged.
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
# Software authenticator that drives the WebAuthn register/authenticate
# ceremonies in-process (the P6 "virtual authenticator" the spec asks for).
webauthn-authenticator-rs = { version = "0.5.5", features = ["softpasskey"] }
# --- oidc-it (real-Keycloak integration tests; compiled only under that feature) ---
# Ephemeral Keycloak via a GenericImage (no Keycloak module exists in
# testcontainers-modules). The headless-login browser client needs reqwest's cookie
# store; serde_json parses discovery/JWKS bodies in assertions.
testcontainers = { version = "0.27.3", features = ["http_wait"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "cookies", "rustls-tls-webpki-roots-no-provider"] }
base64 = "0.22"

[features]
ssr = [
    "dep:axum",
    "dep:axum-login",
    "dep:tower-sessions",
    "dep:async-trait",
    "dep:sqlx",
    "dep:rmp-serde",
    "dep:chrono",
    "dep:tokio",
    "dep:rand",
    "dep:base64",
    "dep:subtle",
    "dep:time",
    "dep:form_urlencoded",
    "dep:webauthn-rs",
    "dep:totp-rs",
    "dep:serde_json",
    "dep:openidconnect",
    "dep:reqwest",
    "dep:rustls",
    "dep:url",
]
# Gates the real-Keycloak integration tests (crates/auth/tests/oidc_flow.rs). Implies
# `ssr` so the OIDC facade is built. Run with: cargo nextest run -p auth --features oidc-it
oidc-it = ["ssr"]

[lints]
workspace = true
