[package]
name = "config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
figment = { version = "0.10.19", features = ["toml", "env"] }
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
humantime-serde = "1.1.1"

[lints]
workspace = true
