[package]
name = "db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "macros", "migrate", "chrono", "uuid"] }
secrecy.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true }
chrono = "0.4.45"
uuid = { version = "1", features = ["v4"] }
proptest = "1"

[lints]
workspace = true
