[package]
name = "db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain", version = "0.1.0" }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "macros", "migrate", "chrono", "uuid"] }
secrecy.workspace = true
thiserror.workspace = true
chrono = "0.4.45"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }
proptest = "1"

[lints]
workspace = true
