[package]
name = "db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain", version = "0.1.0" }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "macros", "migrate", "chrono", "uuid", "json"] }
secrecy.workspace = true
thiserror.workspace = true
chrono = "0.4.45"
uuid = { version = "1", features = ["v4"] }
# The passkeys.passkey column is jsonb; the serialized webauthn-rs Passkey is
# carried opaquely as a serde_json::Value so vendor types never reach this crate.
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true }
proptest = "1"
# The Scene↔jsonb round-trip test stores `floorplan::samples::office()` and loads it
# back through `floorplan::load_scene`; production `db` carries no `floorplan` dep.
floorplan = { path = "../floorplan" }

[lints]
workspace = true
