[package]
name = "observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true

tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.33.0"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["grpc-tonic", "trace", "tls-aws-lc"] }
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }

[lints]
workspace = true
