[package]
name = "ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Leptos drives the components; ssr/hydrate are forwarded from apps/web/app so the
# kit emits identical server/client HTML. (`leptos::wasm_bindgen` re-exports
# wasm-bindgen, so no direct wasm-bindgen dep is needed.)
leptos = { workspace = true }
# Class merging behind the first-party `cn!` facade — shadcn's `cn()` equivalent.
tw_merge = { workspace = true }
# The `variants!`/`cn!` macros expand `$crate::paste`.
paste.workspace = true
# Browser APIs for the SSR-safe hooks (media query, local storage, dark-mode
# class). JS calls run only on the client, inside Effects/event handlers.
web-sys = { version = "0.3", features = [
    "Document",
    "DomTokenList",
    "Element",
    "EventTarget",
    "MediaQueryList",
    "Storage",
    "Window",
] }

# Dependencies are added per wave as components need them. Expected returns:
# leptos_router (nav/sidebar active-link state), leptos_icons + icondata (Lucide
# glyphs), time (calendar/date-picker date math).

[features]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]

[lints]
workspace = true
