[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[features]
default = []
# Browser (wasm) build. `nonce` lets hydration scripts carry a CSP nonce.
hydrate = ["leptos/hydrate", "leptos/nonce"]
# Server build. `nonce` for strict CSP, `tracing` for observability, `rustls`
# so server-function HTTP uses rustls (matches the crypto policy).
ssr = [
    "leptos/ssr",
    "leptos/nonce",
    "leptos/tracing",
    "leptos/rustls",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
]

[lints]
workspace = true
